# DESVU

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  README.md  simple_queue.cpp
examples/simple_queue/: CMakeLists.txt  README.md
examples/simple_queue/src/: Customer.h  Events.cpp  Events.h  Server.cpp  Server.h  SimulationConfig.h  main.cpp
include/desvu/: desvu.h
include/desvu/core/: event.h  simulator.h
include/desvu/stats/: discrete_stats.h  event_stats.h  stats_collector.h  time_weighted_stats.h
tests/: CMakeLists.txt  test_discrete_stats.cpp  test_event_stats.cpp  test_simulator.cpp  test_stats_collector.cpp  test_time_weighted_stats.cpp
